# ta1_integration

./: .gitignore  README.md  config.yml  env.sh  envvars.sh  luigi.cfg  pyproject.toml  status.md
docker-tools/: build.sh  modules.sh
docker/hello-gpu/: Dockerfile  build.sh
docker/tools/: base.txt  build_all.sh  modules.sh  perms.txt
dockers/10_georeference/: build_docker.sh
dockers/2_legend_segment/: build_docker.sh
dockers/3_legend_item_segment/: build_docker.sh
dockers/4_legend_item_description/: build_docker.sh
dockers/5_map_crop/: build_docker.sh
dockers/6_text_spotting/: build_docker.sh
dockers/7_line_extract/: build_docker.sh
dockers/8_polygon_extract/: build_docker.sh
dockers/9_point_extract/: build_docker.sh
docs/: inferlink_umn_cdr_comments.pptx  overview.pptx  top_ten_best_practices.docx
docs/pages/: adding_modules.md  conceptual_overview.md  other_topics.md  running_mip_job.md  running_mip_module.md  running_mip_server.md  running_mipper.md  running_server.md  system_setup.md  todo.md
mip/apps/: mipper.py  mipper_options.py  options.py  perf_probe.py  perf_rollup.py  perf_stress.py
mip/mip_client/: hello_input.json  mip_client.py  run_input.json
mip/mip_job/: mip_job.py  options.py
mip/mip_module/: docker_runner.py  mip_module.py  module_runner.py  options.py
mip/mip_server/: cdr_server_queue.py  jobs_api.py  mip_server.py  misc_api.py  (+2 more)
ops/: Caddyfile  ilaws_config.yml  ilaws_template.yml  install_caddy.sh  mip.service
stack/: README.md  config.yml  main.py  server_setup.sh  stack.py  template.yml  template_parameters.py
(+96 files in other folders)
