[tool.poetry]
name = "mip"
version = "0.1.0"
description = ""
authors = ["Michael P. Gerlek <mgerlek@inferlink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "^1.34.31"
boto3-stubs = "^1.34.35"
botocore = "^1.34.38"
docker = "^7.0.0"
filelock = "^3.13.1"
luigi = "^3.4.0"
mypy_boto3_cloudformation = "^1.34.32"
nvidia-ml-py3 = "7.352.0"
psutil = "^5.9.7"
pydantic = "^2.5.2"
pydantic-yaml = "^1.2.0"
pydot = "^2.0.0"
python = "^3.10"
pyyaml = "^6.0.1"
pip = "^24.0"
install = "^1.3.5"
ilperf = {git = "ssh://git@bitbucket.org/inferlink/ilperf.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
